Fix banner overlap

--- a/views/warningbar/warningbar.css
+++ b/views/warningbar/warningbar.css
@@ -99,14 +99,30 @@ a.auth_outage_warningbar_box_finish:hover {
     background-color: black;
 }
 
-.auth_outage_warningbar_spacer {
-    height: 80px;
-}
-
 body.auth_outage #nav-drawer {
     top: 150px;
 }
 
 body.auth_outage nav.fixed-top.navbar {
     top: 100px;
+}
+
+body.auth_outage #page {
+    margin-top: 150px;
+}
+
+body.auth_outage.path-mod-assign [data-region="grading-navigation-panel"] {
+    top: 100px;
+}
+
+body.auth_outage.path-mod-assign [data-region="grade-panel"] {
+    top: 185px;
+}
+
+body.auth_outage .layout.fullscreen {
+    top: 150px;
+}
+
+body.auth_outage .modal-dialog {
+    margin: calc(150px + 1.75rem) auto;
 }
